# BCW

./: .gitignore  readme.md
BCWEB/: API_Reference_EN.md  ARCHITECTURE.md  App_Features_EN.md  App_Features_FR.md  DOMAIN_SETUP.md  OTHER_PROJECTS_GUIDE.md  README.md  SECURITY_AUDIT.md  SETUP_GUIDE.md  Technical_Analysis_EN.md  Technical_Analysis_FR.md
BCWEB/apps/api/: Dockerfile  package.json
BCWEB/apps/api/src/: abuse.mjs  gitbackup.mjs  lib.mjs  monitor.mjs  net.mjs  plugin.mjs  repofingerprint.mjs  seed.mjs  server.mjs  storage.mjs  sweeper.mjs  totp.mjs
BCWEB/apps/bot/: Dockerfile  README.md  package.json
BCWEB/apps/bot/src/: api.mjs  commands.mjs  config.mjs  index.mjs  store.mjs
BCWEB/apps/provisioner/: Dockerfile  package.json
BCWEB/apps/provisioner/src/: index.mjs
BCWEB/apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
BCWEB/bmm/telemetry-dashboard/: .env.example  .gitignore  Dockerfile  README.md  db.mjs  docker-compose.yml  package-lock.json  package.json  server.mjs  stats.mjs
BCWEB/bmm/telemetry-dashboard/server/: .env.example  Cargo.toml
BCWEB/bmm/telemetry-dashboard/server/migrations/: 0001_init.sql  0002_goal_target.sql  0003_user_ips.sql  0004_replay.sql  0005_audit.sql  0006_replay_gz.sql  0007_recaps.sql  0008_meta.sql  0009_data_requests.sql
BCWEB/bmm/telemetry-dashboard/server/src/: config.rs  db.rs  geo.rs  main.rs  state.rs  stats.rs
BCWEB/infra/caddy/: Caddyfile
BCWEB/infra/compose/: .env.example  docker-compose.yml
BCWEB/loadtest/: BENCHMARK.md  run.mjs
(+94 files in other folders)
