[package]
name = "bmm-telemetry-server"
version = "0.1.0"
edition = "2021"
description = "BMM telemetry dashboard backend (Axum + Postgres)"

[[bin]]
name = "bmm-telemetry-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip", "decompression-gzip", "trace"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
flate2 = "1"
base64 = "0.22"

[profile.release]
opt-level = 2
lto = "thin"
